# -IDEAS-TIH-Stock-Price-Prediction-using-Time-Series-and-Sentiment-Analysis-using-NLP

./: .gitignore  README.md  pyproject.toml  requirements.txt
notebooks/: 1. Price Data Collection and Cleaning.ipynb  2. Sentiment Data Collection and Cleaning.ipynb  3. Data Preprocessing and Feature Engineering.ipynb  4. Sentiment Scoring and Feature Engineering.ipynb  5. Baseline Modelling.ipynb  6. Advanced Modelling.ipynb  ISI_Stock_Price_Prediction_1A.ipynb  ISI_Stock_Price_Prediction_1B.ipynb
