[project]
name = "project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pandas",
    "numpy",
    "matplotlib",
    "seaborn",
    "tensorflow",
    "scikit-learn",
    "pathlib",
    "yfinance",
    "pytz",
    "keras"
]

